# aurora_ai

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_session_and_message.py
backend/app/: config.py  db.py  main.py
backend/app/models/: chat.py  db.py  flow.py  flow_events.py  graph.py  scores.py
backend/app/routes/: chat.py  stt.py  voice.py
backend/app/services/: agent.py  chat_agent.py  document_parser.py  extractor_agent.py  flow_graph.py  phase.py  regression.py  scoring_agent.py  sessions.py  tts.py
backend/portfolio_manager_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_chat.py  test_document_parser.py  test_flow_graph.py  test_phase.py  test_regression.py  test_scores.py  test_scoring.py  test_sessions.py  test_upload.py
docs/: three-rings.md
frontend/: Dockerfile  README.md  index.html  netlify.toml  nginx.conf  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChatPanel.tsx  DebugPanel.tsx  FlowGraph.tsx  RingDetail.tsx  RingDonut.tsx  ThreeRings.tsx
frontend/src/hooks/: useChat.ts  useSpeechToText.ts  useTypingEffect.ts  useVoiceChat.ts
infra/: README.md
sample_uploads/: test_initiative.docx  test_initiative.pptx
