[project]
name = "portfolio-manager-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-ai>=0.2",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "sse-starlette>=2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "httpx>=0.28",
]
