[project]
name = "portfolio-manager-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic-ai>=0.2",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "sse-starlette>=2.2",
    "cartesia[websockets]>=3.0.2",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "openpyxl>=3.1",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30",
    "alembic>=1.15",
    "langgraph>=0.2",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "httpx>=0.28",
    "anyio>=4.0",
    "pytest-anyio>=0.0.0",
    "aiosqlite>=0.20",
]
